updated the prisma schema and onboarding
