# backend/src/swagger-output.json
@@ -78,6 +78,36 @@
         }
       }
     },
+    "/api/auth/setup-account": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "token": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/api/auth/me": {
       "get": {
         "description": "",
@@ -240,10 +270,7 @@
                 "email": {
                   "example": "any"
                 },
-                "phone": {
-                  "example": "any"
-                },
-                "documents": {
+                "role": {
                   "example": "any"
                 },
                 "medium": {
@@ -252,7 +279,7 @@
                 "district": {
                   "example": "any"
                 },
-                "subjects": {
+                "subject": {
                   "example": "any"
                 }
               }
@@ -262,6 +289,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -309,9 +339,6 @@
           },
           "403": {
             "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
